@@ -1,7 +1,7 @@
 /* vim:set ts=2 nowrap: ****************************************************
 
  librtdebug - A C++ based thread-safe Runtime Debugging Library
- Copyright (C) 2003-2005 by Jens Langner <Jens.Langner@light-speed.de>
+ Copyright (C) 2003-2006 by Jens Langner <Jens.Langner@light-speed.de>
 
  This library is free software; you can redistribute it and/or
  modify it under the terms of the GNU Lesser General Public
@@ -23,8 +23,7 @@
 
 Future plans:
 ------------
-
-- enhance the runtime debugging functionality to set the debugging levels
-	during runtime, allowing to skip certain debug output.
+- get rid of the "qmake" depedency as rtdebug is not really using Qt
+	in any form.
 - memory tracking interface with warnings about memory leaks. 
 - implement more usefull macros for tracking memory usage
